2004-07-02  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): 
	Make sure we check for a NULL model first.

2004-07-01  J. Ali Harlow  <ali@juiblex.co.uk>

	* gdk/win32/gdkinput-win32.c (_gdk_input_ungrab_pointer): Fix
	win32 build problem w/o wintab.  Fixed #145242

2004-06-30  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): Use
	g_return_if_fail to make sure that the model is a GtkTreeModel.

Sat Jun 26 17:41:10 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtk[hv]separator.c (gtk_[hv]separator_expose): Draw line with the
	current state, not GTK_STATE_NORMAL

	* gtk/gtkframe.c (gtk_frame_paint): Fix a rounding error

Sat Jun 26 15:07:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkstyle.c, gtk/gtkrc.c: small color tweak. (#141173)

Sat Jun 26 01:15:40 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): Handle
	_NET_WM_STATE_ABOVE and _NET_WM_STATE_BELOW.  (#144851, 
	Billy Biggs)

Sat Jun 26 01:04:31 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconfactory.c (clear_cache): Prevent unwanted 
	recursion by resetting icon_set->cache before freeing
	the cache.  (#144947, Tim Janik)

Sat Jun 26 00:40:02 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconfactory.c (render_icon_name_pixbuf): 
	* gtk/gtkiconfactory.c (gtk_icon_set_render_icon): 
	* gtk/gtkstyle.c (gtk_default_render_icon): Accept a NULL 
	style.

Sat Jun 26 00:04:36 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_set_model): 
	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Reflect the 
	last change in the docs.

Fri Jun 25 23:35:42 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_set_model):
	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Allow passing
	NULL to unset the model.  (#137211, patch by  Mariano Suárez-Alvarez)

Fri Jun 25 23:33:05 2004  Matthias Clasen  <maclas@gmx.de>
