@@ -1,3 +1,10 @@
+Fri Jul  2 21:40:21 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtknotebook.c (gtk_notebook_realize): Add scroll events
+	to the event mask, set a scroll_event handler.
+	* gtk/gtknotebook.c (gtk_notebook_scroll): Handle scroll events
+	by switching tabs.  (#145244, Gabriel de Perthuis)
+
 2004-07-02  Anders Carlsson  <andersca@gnome.org>
 
 	* gtk/gtktreeview.c (gtk_tree_view_set_model): 
